# OceanGL

./: .gitignore  CMakeLists.txt  README.md
include/: Camera.h  ComputeShader.hpp  EBO.hpp  Flotability.hpp  Flotability_2.hpp  Headers.h  Headers.hpp  Orbital.hpp  Plane.h  Plane.hpp  Shader.hpp  Skybox.hpp  Sound.hpp  Texture.h  Texture.hpp  VAO.hpp  VBO.hpp  Window.h  Window.hpp  shader.hpp
include/glad/: glad.h
shaders/: FFT.frag  FFT.vert  GerstnerWave.frag  GerstnerWave.vert  Multiple_SinWave.frag  Multiple_SinWave.vert  SinWave.frag  SinWave.vert  Skybox.frag  Skybox.vert  SkyboxFragment.frag  SkyboxVertex.vert  SumGerstnerWave.frag  SumGerstnerWave.vert  SumSinWave.frag  SumSinWave.vert  SumSine.frag  SumSine.vert  comp.cs  flottabilite_fragmentShader.frag  flottabilite_vertexShader.vert  fragment_shader.glsl  fs.frag  skybox_fragment.frag  skybox_vertex.vert  vertex_shader.glsl  vs.vert
shaders/CopyShaders/: GerstnerWave.vert  OceanGL.cpp  SinWave.vert
src/: Camera.cpp  ComputeShader.cpp  EBO.cpp  Flotability.cpp  Flotability_2.cpp  OceanGL.cpp  Orbital.cpp  Plane.cpp  Shader.cpp  Skybox.cpp  Sound.cpp  Texture.cpp  VAO.cpp  VBO.cpp  Window.cpp  glad.c  main.cpp  shader.cpp  stb_image.cpp
src/Imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp  imgui_widgets.cpp
